
o FIX: plotting parameters for `bootEGA`

o FIX: redundancy output for adhoc check in `UVA`

o FIX: latent variable with non-space separated entries in `UVA` (`reduce.method = "latent"`)

o UPDATE: `UVA` was added to `methods.section`

o UPDATE: neural network weights in `LCT` (now only tests for factor or small-world network models)

o UPDATE: citations


Changes in version 0.9.8

o UPDATE: Unidimensional check in `EGA` expands a correlation matrix (rather than generating variables; much more efficient)

o ADD: `color_palette_EGA` New EGA palettes for plotting `ggnet2` EGA network plots (see `?color_palette_EGA`)

o ADD: `UVA` or Unique Variable Analysis operates as a comprehensive handling of variable redundancy in multivariate data (see `?UVA`)

o DEFUNCT: `node.redundant`, `node.redundant.names`, and `node.redundant.combine` will be defunct in next version. Please use `UVA`

o ADD: a new function to compute a parametric Bootstrap Test for the Ergodicity Information Index (see `?boot.ergoInfo`)

o ADD: basic Shiny functionality (`EGA` only)

o ADD: a new function to compute a Monte-Carlo Test for the Ergodicity Information Index (see `?mctest.ergoInfo`)

o ADD: a new function to compute the Ergodicity Information Index (see `?ergoInfo`)

o UPDATE: new plotting scheme using *network* and *GGally* packages

o ADD: a function to produce an automated Methods section for several functions (see `?methods.section`)

o UPDATE: `bootEGA` now implements the updated `EGA` algorithm

o UPDATE: ega.wmt data (unidimensional)

o UPDATE: `itemStability` plot defaults ("GGally" color scheme) and examples (manipulating plot)

o ADD: total correlation (see `?totalCor` and `totalCorMat`)

o ADD: correlation argument (corr) for `EGA`, `bootEGA`, and `UVA`

o FIX: *GGally* color palette when more than 9 dimensions

Changes in version 0.9.7

o UPDATE: `LCT` neural network weights were updated (parametric relu activation function)

o FIX: naming in `EGA`
