@@ -54,6 +54,9 @@
 #' {Generates n random subsamples of the original data}
 #'
 #' }
+#' 
+#' @param seed Numeric.
+#' Seed to reproduce results. Defaults to \code{NULL} (random)
 #'
 #' @param corr Type of correlation matrix to compute. The default uses \code{\link[qgraph]{cor_auto}}.
 #' Current options are:
@@ -256,9 +259,9 @@
 #' @export
 #'
 # Bootstrap EGA
-# Updated 05.08.2021
+# Updated 31.10.2021
 bootEGA <- function(data, n = NULL, uni.method = c("expand", "LE"), iter,
-                    type = c("parametric", "resampling"),
+                    type = c("parametric", "resampling"), seed = NULL,
                     corr = c("cor_auto", "pearson", "spearman"),
                     model = c("glasso", "TMFG"), model.args = list(),
                     algorithm = c("walktrap", "louvain"), algorithm.args = list(),
@@ -408,6 +411,13 @@ bootEGA <- function(data, n = NULL, uni.method = c("expand", "LE"), iter,
 
   }
 
+  # Set seed
+  set.seed(seed)
+  
+  if(is.null(seed)){
+    warning("Results are unique. Set the 'seed' argument for reproducible results (see examples)")
+  }
+  
   #initialize data list
   datalist <- list()
 
@@ -544,6 +554,9 @@ bootEGA <- function(data, n = NULL, uni.method = c("expand", "LE"), iter,
     lik[count,1] <- i
     lik[count,2] <- length(which(boot.ndim[,2]==i))/iter
   }
+  
+  # Reset seed
+  set.seed(NULL)
 
   result <- list()
   result$iter <- iter
