@@ -30,6 +30,8 @@ o UPDATE: neural network weights in `LCT` (now only tests for factor or small-wo
 
 o UPDATE: citations
 
+o UPDATE: added `seed` argument for `bootEGA` to reproduce results
+
 
 Changes in version 0.9.8
 
